// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option go_package = "github.com/cloudfoundry-incubator/multiapps-cli-plugin/test-proto";
option java_multiple_files = true;
option java_package = "com.sap.cloud.lm.sl.xs2.local";
option java_outer_classname = "MtasProto";
option objc_class_prefix = "HLW";

package com.sap.cloud.lm.sl.xs2.local;

service Mtas {
  
  rpc getMtas (MtasRequest) returns (MtasResponse) {}
  
  rpc shutDown (Empty) returns (Empty) {}

}

message MtasRequest {
  string token = 1;
  string organizationName = 2;
  string spaceName = 3;
  string apiUrl = 4;
}

message MtasResponse {
  repeated MtaMetadata mtas = 1;
}

message MtaMetadata {
  string id = 1;
  string version = 2;
}

message Empty {

}

